<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.fragmento.FragmentoInicioSesion">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_location"
                android:tint="@color/red"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="Viaja con propósito a destinos remotos de Colombia"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/main"/>

            <com.tomlonghurst.expandablehinttext.ExpandableHintText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/user"
                android:layout_marginHorizontal="20dp"
                android:hint="Correo"
                app:floatingLabelColor="@color/blue"
                app:image="@drawable/ic_baseline_email_24"
                app:imageColor="@color/text"
                app:textBoxColor="@color/main" />

            <com.tomlonghurst.expandablehinttext.ExpandableHintText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:hint="Contraseña"
                android:id="@+id/pass"
                app:floatingLabelColor="@color/blue"
                app:image="@drawable/ic_baseline_vpn_key_24"
                app:imageColor="@color/text"
                app:textBoxColor="@color/main" />
            <Button

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/ingresar"
                android:onClick="ingresar"
                android:background="@drawable/bg_button"
                android:layout_marginTop="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="Ingresar"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>