...


            </LinearLayout>
            <Button
                android:layout_margin="10dp"
                android:background="@drawable/bg_button"
                android:id="@+id/boton_de_confirmacion"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_weight="4"
                android:textColor="@color/text"
                android:text="Confirmar" />
...
